# nutricao

./: .gitignore  README.md  alembic.ini  pyproject.toml  rxconfig.py  tree.pkl
entities/: __init__.py  access.py  audit_log.py  base.py  enums.py  food.py  login.py  mixin.py  person.py  places.py  system.py
environment/: __init__.py  main.py
migrations/: cities_br.json  distritos.json  env.py  municipios_ibge.csv  script.py.mako
migrations/versions/: 01b7ee9b5f55_load_data.py  01b7ee9b5f55_load_food_group_into_database.py  0370631a531f_configure_person_into_database.py  14b548b2908d_configura_brazilian_states.py  1653e572f940_configure_country_codes_into_database.py  179b3c6dc748_configure_contact_document_into_database.py  1a4d17b4efa4_create_view_vw_login.py  26fc160a46bf_load_food_component_into_database.py  37117391b8b6_initial_revision_create_a_baseline_.py  51f6facdd59e_load_food_into_database.py  55d2ecc169e5_menu.py  6b6a1934df47_inserting_fake_data_into_database_for_.py  6be78570d2eb_configure_education_into_database.py  749248e21515_configure_brazilian_cities.py  87826ec858af_add_field_action_on_audit.py  8e3f505ed049_remove_column_cpnj_from_company.py  90c82e943507_create_view_vw_person.py  93d693f2ffdb_configure_gender_into_database.py  b9eda23299a6_load_data_into_menu.py  (+6 more)
migrations_reset/: env.py
nutricao/: __init__.py  nutricao.py  routes.py
tests/: __init__.py  add_login.py  comprehensions.py  entity_tests.py  func_from_name.py  insert_fake_data.py  menu_test.py  model.py  test_db.py  tree.pkl  tree.py
utils/: __init__.py  cpf.py  logger.py
(+36 files in other folders)
