[project]
name = "nutricao"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcelo de Campos",email = "sr.marcelo.campos@gmail.com"}
]
license = {text = "copyleft"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "psycopg-binary (>=3.2.6,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic[all] (>=2.11.3,<3.0.0)",
    "alembic[all] (>=1.15.2,<2.0.0)",
    "pytest[all] (>=8.3.5,<9.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "reflex[all] (>=0.7.7,<0.8.0)",
    "reflex-ag-grid (>=0.0.11,<0.0.12)",
    "psycopg (>=3.2.6,<4.0.0)",
    "reflex-icon-library (>=1.4.1,<2.0.0)",
    "faker (>=37.1.0,<38.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
